# The-Last-Knight

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CREDITS.md  Dockerfile  MAPS_CREATED.md  ORCHESTRATION.md  README.md  TRACKING.md  config.py  docker-compose.yml  main.py  pyproject.toml  start.sh
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md  my-agent.agent.md
.github/instructions/: python.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  release.yml
agents/: claude-code-prompts.md
assets/: README.md
assets/maps/: README.md  level_01_tutorial.tmx  level_02_dungeon.tmx  level_03_boss_arena.tmx
docs/: knight_sprites_implementation.md
issues/: KNIGHT-001.md  KNIGHT-002.md  KNIGHT-003.md  KNIGHT-004.md  KNIGHT-005.md  KNIGHT-006.md  KNIGHT-007.md  KNIGHT-008.md  KNIGHT-009.md  KNIGHT-010.md  KNIGHT-011.md  KNIGHT-012.md  KNIGHT-013.md  KNIGHT-014.md
scripts/: verify_assets.py
src/: __init__.py  game.py
src/core/: game.py  resource_manager.py  settings.py
src/entities/: __init__.py  boss.py  enemy.py  entity.py  player.py
src/entities/boss_states/: __init__.py
src/levels/: __init__.py  level_manager.py  spawner.py  tile_map.py
src/states/: __init__.py  attack_state.py  dash_state.py  fall_state.py  idle_state.py  jump_state.py  run_state.py  state.py  wall_climb_state.py  wall_slide_state.py
src/systems/: __init__.py  ai.py  animation.py  audio.py  audio_manager.py  camera.py  collision.py  combat.py  input_handler.py  physics.py  sprite_loader.py
src/ui/: __init__.py  hud.py  widgets.py
src/ui/screens/: __init__.py  base_screen.py  credits_screen.py  game_screen.py  help_screen.py  intro_screen.py  menu_screen.py  pause_screen.py
tests/: README.md  __init__.py  conftest.py  test_animation.py  test_audio.py  test_audio_manager.py  test_boss.py  test_collision.py  test_combat.py  test_enemy.py  test_entity.py  test_game.py  test_input_handler.py  test_knight_sprites.py  test_levels.py  test_physics.py  test_placeholder.py  test_player.py  test_resource_manager.py  test_spawner.py  test_ui.py  visual_knight_test.py
